[gd_scene load_steps=10 format=3 uid="uid://dxfkw2o0ikgft"]

[ext_resource type="Script" uid="uid://qxtx2cu8heck" path="res://scripts/main_menu.gd" id="1_rtw2f"]
[ext_resource type="Texture2D" uid="uid://cs8ifq12biqk" path="res://sprites/menu/main_menu/main_menu.png" id="2_oa1go"]
[ext_resource type="Texture2D" uid="uid://cmsqb6ctcf31" path="res://sprites/menu/main_menu/logo.png" id="3_tbmy8"]
[ext_resource type="Texture2D" uid="uid://cvwwbr3quhmoj" path="res://sprites/menu/main_menu/play_frame.png" id="4_jk1qb"]
[ext_resource type="Texture2D" uid="uid://dd7nf6oy0b1k6" path="res://sprites/menu/main_menu/settings_frame.png" id="5_5dd4i"]
[ext_resource type="Texture2D" uid="uid://cqs5yqqvmpatd" path="res://sprites/menu/main_menu/exit_frame.png" id="6_lgwnu"]
[ext_resource type="PackedScene" uid="uid://c37y7rfmkl8q2" path="res://scenes/grass.tscn" id="7_oa1go"]
[ext_resource type="PackedScene" uid="uid://6q0bh83qp3e6" path="res://scenes/flower.tscn" id="8_tbmy8"]
[ext_resource type="Texture2D" uid="uid://dh6v3qbehcni7" path="res://sprites/shadow/big-shadow.png" id="9_jk1qb"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_rtw2f")

[node name="MainMenu" type="Sprite2D" parent="."]
position = Vector2(72, 80)
texture = ExtResource("2_oa1go")

[node name="Logo2" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(75, 30)
texture = ExtResource("3_tbmy8")

[node name="Logo" type="Sprite2D" parent="Logo2"]
position = Vector2(-3, -5)
texture = ExtResource("3_tbmy8")

[node name="SettingsButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 27.5
offset_top = 67.0
offset_right = 67.5
offset_bottom = 113.0

[node name="SettingsFrame" type="Sprite2D" parent="."]
visible = false
position = Vector2(48.5, 90)
scale = Vector2(1, 1)
texture = ExtResource("5_5dd4i")

[node name="PlayButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 63.0
offset_top = 47.5
offset_right = 83.0
offset_bottom = 92.5

[node name="PlayFrame" type="Sprite2D" parent="."]
visible = false
position = Vector2(73, 70.5)
scale = Vector2(1, 1)
texture = ExtResource("4_jk1qb")

[node name="ExitButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 74.5
offset_top = 107.0
offset_right = 98.5
offset_bottom = 147.0

[node name="ExitFrame" type="Sprite2D" parent="."]
visible = false
position = Vector2(86.5, 127)
scale = Vector2(1, 1)
texture = ExtResource("6_lgwnu")

[node name="all_grass" type="Node2D" parent="."]

[node name="grass" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(43, 144)

[node name="grass2" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(29, 136)

[node name="grass3" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(26, 146)

[node name="grass25" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(38, 154)

[node name="grass5" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(11, 153)

[node name="grass6" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(9, 141)

[node name="grass7" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(39, 126)

[node name="grass8" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(59, 139)

[node name="grass9" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(67, 122)

[node name="grass10" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(75, 150)

[node name="grass11" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(93, 149)

[node name="grass12" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(99, 140)

[node name="grass26" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(117, 141)

[node name="grass27" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(110, 153)

[node name="grass13" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(128, 152)

[node name="grass14" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(107, 131)

[node name="grass15" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(135, 139)

[node name="grass16" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(105, 119)

[node name="grass29" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(96, 111)

[node name="grass17" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(84, 103)

[node name="grass18" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(8, 98)

[node name="grass19" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(13, 85)

[node name="grass20" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(8, 71)

[node name="grass21" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(24, 77)

[node name="grass22" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(25, 66)

[node name="grass23" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(15, 58)

[node name="grass24" parent="all_grass" instance=ExtResource("7_oa1go")]
position = Vector2(74, 131)

[node name="flower" parent="." instance=ExtResource("8_tbmy8")]
position = Vector2(54, 125)

[node name="flower2" parent="." instance=ExtResource("8_tbmy8")]
position = Vector2(120, 119)
scale = Vector2(-1, 1)

[node name="Big-shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(70, 79)
texture = ExtResource("9_jk1qb")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="." method="_on_settings_button_mouse_exited"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
